--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <title>Hello!</title>
     </head>
     <body>
-        Hello, world!
+        Hello, world! 
+        Hello, Skylar!
+        Hello, Lucas!
     </body>
 <html>
